how to change html element on click event

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Project 1</title>
 </head>
 <body>
-    
+    <!-- how to change html element -->
+    <h1>How to change html element</h1>
+    <h3>The below font will be changed on click</h3>
+    <p id="change">Hello I'm going to change on click</p>
+    <button type="button" onclick="document.getElementById('change').innerHTML='I have changed on Click'">Click here</button>
+
+    <hr>
 </body>
 </html>
