how to change html element attrubute value

--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
     <button type="button" onclick="document.getElementById('change').innerHTML='I have changed on Click'">Click here</button>
 
     <hr>
+
+    <h1>How to change html element attribute values</h1>
+    <h3>The bulb will be turned on or off on clicking on the respective buttons</h3>
+    <button type="button" onclick="document.getElementById('bulb').src='./asset/pic_bulbon.gif'">Turn the bulb on</button>
+    <img id="bulb" src="./asset/pic_bulboff.gif" alt="">
+    <button type="button" onclick="document.getElementById('bulb').src='./asset/pic_bulboff.gif'">Turn the bulb off</button>
+
+    <hr>
+
+    
 </body>
 </html>
