how to change html style

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <hr>
 
+    <!-- how to change html element attribute value  -->
     <h1>How to change html element attribute values</h1>
     <h3>The bulb will be turned on or off on clicking on the respective buttons</h3>
     <button type="button" onclick="document.getElementById('bulb').src='./asset/pic_bulbon.gif'">Turn the bulb on</button>
@@ -22,6 +23,11 @@
 
     <hr>
 
-    
+    <!-- how to change html style  -->
+    <h1>How to change html style</h1>
+    <p id="text">My appearance will be change on clicking on the buttons</p>
+    <button type="button" onclick="document.getElementById('text').style.fontSize='38px'">Change Text Size</button>
+    <button type="button" onclick="document.getElementById('text').style.color='blue'">Change Text Color</button>
+
 </body>
 </html>
