how to show and hide an html element

--- a/index.html
+++ b/index.html
@@ -25,9 +25,17 @@
 
     <!-- how to change html style  -->
     <h1>How to change html style</h1>
-    <p id="text">My appearance will be change on clicking on the buttons</p>
+    <p id="text">My appearance will be changed on clicking on the buttons</p>
     <button type="button" onclick="document.getElementById('text').style.fontSize='38px'">Change Text Size</button>
-    <button type="button" onclick="document.getElementById('text').style.color='blue'">Change Text Color</button>
+    <button type="button" onclick="document.getElementById('text').style.color='red'">Change Text Color</button>
+
+    <hr>
+
+    <!-- how to show and hide an element  -->
+    <h1>How to show and hide html element</h1>
+    <p id="target">Show me or hide me</p>
+    <button type="button" onclick="document.getElementById('target').style.display='none'">Hide</button>
+    <button type="button" onclick="document.getElementById('target').style.display='block'">Show</button>
 
 </body>
 </html>
