more than one function can be declared in a js file which can be used/called in an  HTML document

--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
     <!-- how to change html element attribute value  -->
     <h1>How to change html element attribute values</h1>
     <h3>The bulb will be turned on or off on clicking on the respective buttons</h3>
-    <button type="button" onclick="document.getElementById('bulb').src='./asset/pic_bulbon.gif'">Turn the bulb
-        on</button>
+    <button type="button" onclick="document.getElementById('bulb').src='./asset/pic_bulbon.gif'">Turn the bulb on</button>
     <img id="bulb" src="./asset/pic_bulboff.gif" alt="">
-    <button type="button" onclick="document.getElementById('bulb').src='./asset/pic_bulboff.gif'">Turn the bulb
-        off</button>
+    <button type="button" onclick="document.getElementById('bulb').src='./asset/pic_bulboff.gif'">Turn the bulb off</button>
 
     <hr>
 
@@ -34,7 +32,7 @@
     <h1>How to change html style</h1>
     <p id="text">My appearance will be changed on clicking on the buttons</p>
     <button type="button" onclick="document.getElementById('text').style.fontSize='38px'">Change Text Size</button>
-    <button type="button" onclick="document.getElementById('text').style.color='red'">Change Text Color</button>
+    <button type="button" onclick="changeColor()">Change Text Color</button>
 
     <hr>
 
@@ -44,8 +42,9 @@
     <button type="button" onclick="document.getElementById('target').style.display='none'">Hide</button>
     <button type="button" onclick="document.getElementById('target').style.display='block'">Show</button>
 
-
+    <!-- external javascript  -->
     <script src="changeHTML.js"></script>
+
     <!-- 
     document is an object
     getElementById is a method or function which takes argument
