javascritp output possibilites except inner.HTML

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
     <button type="button" onclick="document.getElementById('target').style.display='none'">Hide</button>
     <button type="button" onclick="document.getElementById('target').style.display='block'">Show</button>
 
+    <hr>
+
+    <!-- how to show javascript output  -->
+    <button type="button" onclick="javaScriptOutput(alert('valo hoye jao masud by alert method'))">Show Alert</button>
+    <button type="button" onclick="javaScriptOutput(console.log('console.log is used for debugging'))">Open dev tool</button>
+    <button type="button" onclick="javaScriptOutput(window.print())">Print this document</button>
+    <button type="button" onclick="javaScriptOutput(document.write('all in this document is hidden by document.write() method. Reload to show all.'))">Hide all</button>
+
     <!-- external javascript  -->
     <script src="changeHTML.js"></script>
 
