the previous js output are shown via function which was unnecessary

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <hr>
 
     <!-- how to show javascript output  -->
-    <button type="button" onclick="javaScriptOutput(alert('valo hoye jao masud by alert method'))">Show Alert</button>
-    <button type="button" onclick="javaScriptOutput(console.log('console.log is used for debugging'))">Open dev tool</button>
-    <button type="button" onclick="javaScriptOutput(window.print())">Print this document</button>
-    <button type="button" onclick="javaScriptOutput(document.write('all in this document is hidden by document.write() method. Reload to show all.'))">Hide all</button>
+    <button type="button" onclick="alert('valo hoye jao masud by alert method')">Show Alert</button>
+    <button type="button" onclick="console.log('console.log is used for debugging')">Open dev tool</button>
+    <button type="button" onclick=window.print()>Print this document</button>
+    <button type="button" onclick="document.write('all in this document is hidden by document.write() method. Reload to show all.')">Hide all</button>
 
     <!-- external javascript  -->
     <script src="changeHTML.js"></script>
