--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- how to show and hide an element  -->
     <h1>How to show and hide html element</h1>
     <p id="target">Show me or hide me</p>
-    <button type="button" onclick="document.getElementById('target').style.display='none'">Hide</button>
+    <button type="button" onclick="document.getElementById('target').style.display='none'">Hide me</button>
     <button type="button" onclick="document.getElementById('target').style.display='block'">Show</button>
 
     <hr>
